Updated live Humidity and Wind data

--- a/index.html
+++ b/index.html
@@ -47,16 +47,22 @@
               <div class="col-2" style="font-weight: bold" id="cty">City</div>
               <br />
               <br />
-              <div class="col-9" id="unit">
+              <div class="col-9" id="tempElement">
                 <strong>22</strong>
                 <span class="degree">°C|°F</span>
               </div>
               <div class="col-3" id="city">Atlanta,GA</div>
-              <div class="col-9" id="weather-icon">Sunny</div>
+              <div class="col-9" id="description">Sunny</div>
               <div id="dayTime">Friday 3:00pm</div>
             </div>
           </h2>
           <br />
+          <div class="row" id="weatherDetails">
+            <ul>
+              <li>Humidity: <span id="humidity"> </span></li>
+              <li>Wind: <span id="wind"></span>Km/H</li>
+            </ul>
+          </div>
           <div class="row" id="info">
             <div class="col-2">
               <span class="days"> Sat </span>
