Updated Date and Time functions

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <strong>22</strong>
                 <span class="degree">°C|°F</span>
               </div>
-              <div class="col-3" id="city">Atlanta,GA</div>
+              <div class="col-3" id="city"></div>
               <div class="col-9" id="description">Sunny</div>
               <div id="dayTime">Friday 3:00pm</div>
             </div>
@@ -59,7 +59,7 @@
           <br />
           <div class="row" id="weatherDetails">
             <ul>
-              <li>Humidity: <span id="humidity"> </span></li>
+              <li>Humidity: <span id="humidity">%</span></li>
               <li>Wind: <span id="wind"></span>Km/H</li>
             </ul>
           </div>
