Changed OpenWeather API to SheCodes Weather API

--- a/index.html
+++ b/index.html
@@ -47,6 +47,13 @@
               <div class="col-2" style="font-weight: bold" id="cty">City</div>
               <br />
               <br />
+              <span>
+                <img
+                  src="https://cdn4.iconfinder.com/data/icons/the-weather-is-nice-today/64/weather_3-512.png"
+                  alt="Sunny"
+                  id="icon"
+                />
+              </span>
               <div class="col-9" id="tempElement">
                 <strong>22</strong>
                 <span class="degree">°C|°F</span>
