--- a/index.html
+++ b/index.html
@@ -55,7 +55,10 @@
           />
           <h2 id="tempElement">
             <strong id="locationTemp"></strong>
-            <span class="degree">°C| <a href="">°F</a></span>
+            <span class="degree">
+              <a href="#" id="celcius-link" class="active">°C</a> |
+              <a href="#" id="fahrenheit-link">°F</a>
+            </span>
           </h2>
           <h2 id="description">Sunny</h2>
           <h2 id="dayTime">Friday 3:00pm</h2>
