--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body id="bodystyle">
     <div class="container">
-      <div class="card-body">
+      <div class="card">
         <form id="search-form">
           <div class="row">
             <div class="col-10">
