Removed week forecast from HTML file
Added <div class="weather-forecast"
id="forecast"

--- a/index.html
+++ b/index.html
@@ -67,55 +67,10 @@
             <li>Wind: <span id="wind"></span>Km/H</li>
           </ul>
         </div>
-        <div class="row row-cols-5" id="info">
-          <div class="col">
-            <span class="days"> Sat </span>
-            <br />
-            ☁️
-            <br />
-            77°F
-            <br />
-            <span class="low">63°F</span>
-          </div>
-          <div class="col">
-            <span class="days">Sun</span>
-            <br />
-            🌤
-            <br />
-            79°F
-            <br />
-            <span class="low">64°F</span>
-          </div>
-          <div class="col">
-            <span class="days">Mon</span>
-            <br />
-            🌤
-            <br />
-            81°F
-            <br />
-            <span class="low">62°F</span>
-          </div>
-          <div class="col">
-            <span class="days">Tues</span>
-            <br />
-            🌤
-            <br />
-            75°F
-            <br />
-            <span class="low">66°F</span>
-          </div>
-          <div class="col">
-            <span class="days">Wed</span>
-            <br />
-            🌤
-            <br />
-            66°F
-            <br />
-            <span class="low">52°F</span>
-          </div>
-        </div>
+        <div class="weather-forcast" id="forecast"></div>
       </div>
     </div>
+    <br />
     <h6>
       Coded by Jessica Gonzalez. Get the code for this app on
       <span class="badge rounded-pill text-bg-light" id="gitLink">
