Removed celsius link

--- a/index.html
+++ b/index.html
@@ -55,10 +55,7 @@
           />
           <h2 id="tempElement">
             <strong id="locationTemp"></strong>
-            <span class="degree">
-              <a href="#" id="celcius-link" class="active">°C</a> |
-              <a href="#" id="fahrenheit-link">°F</a>
-            </span>
+            <span class="degree"> °F </span>
           </h2>
           <h2 id="description">Sunny</h2>
           <h2 id="dayTime">Friday 3:00pm</h2>
